--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
     permissions:
       pages: write
       id-token: write
+      actions: read
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
