--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,6 @@ jobs:
     permissions:
       pages: write
       id-token: write
-      actions: read
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
@@ -42,5 +41,8 @@ jobs:
           name: github-pages
       - name: Configure Pages
         uses: actions/configure-pages@v4
-      - name: Deploy
-        uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
