--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build project
         run: npm run build
       - name: Verify build output
-        run: ls -l ./dist  # Verifica que los archivos correctos estén en dist
+        run: ls -l ./dist
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
